// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on fixed invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  "179",
                  "202",
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "179",
              "202",
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  179,
                  202,
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              179,
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search row based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search with no valid checked docTypes based on invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  "test",
                  202,
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "test",
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render date range fields 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={true}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              disableFuture={true}
              disabled={false}
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Created",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 22,
                  "title": "Created date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              disableFuture={true}
              disabled={false}
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Updated",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 23,
                  "title": "Updated date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render default view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render default view with open access checked 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render default view with styles 1`] = `
<AdvancedSearchComponent
  className="advanced-search"
  classes={
    Object {
      "blueButton": "AdvancedSearchComponent-blueButton-3",
      "searchButton": "AdvancedSearchComponent-searchButton-2",
      "sideBar": "AdvancedSearchComponent-sideBar-1",
    }
  }
  createdRange={Object {}}
  fieldRows={
    Array [
      Object {
        "label": "",
        "searchField": "0",
        "value": "",
      },
    ]
  }
  isLoading={false}
  isMinimised={false}
  isOpenAccess={false}
  onAdvancedSearchReset={[Function]}
  onAdvancedSearchRowAdd={[Function]}
  onAdvancedSearchRowChange={[MockFunction]}
  onAdvancedSearchRowRemove={[Function]}
  onSearch={[MockFunction]}
  onToggleMinimise={[Function]}
  onToggleOpenAccess={[Function]}
  onToggleSearchMode={[Function]}
  showUnpublishedFields={false}
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
        "width": [Function],
      },
      "direction": "ltr",
      "mixins": Object {
        "gutters": [Function],
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "overrides": Object {},
      "palette": Object {
        "action": Object {
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "hover": "rgba(0, 0, 0, 0.08)",
          "hoverOpacity": 0.08,
          "selected": "rgba(0, 0, 0, 0.14)",
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fafafa",
          "paper": "#fff",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#d32f2f",
          "light": "#e57373",
          "main": "#f44336",
        },
        "getContrastText": [Function],
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#d5d5d5",
          "A200": "#aaaaaa",
          "A400": "#303030",
          "A700": "#616161",
        },
        "primary": Object {
          "contrastText": "#fff",
          "dark": "#303f9f",
          "light": "#7986cb",
          "main": "#3f51b5",
        },
        "secondary": Object {
          "contrastText": "#fff",
          "dark": "#c51162",
          "light": "#ff4081",
          "main": "#f50057",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "hint": "rgba(0, 0, 0, 0.38)",
          "primary": "rgba(0, 0, 0, 0.87)",
          "secondary": "rgba(0, 0, 0, 0.54)",
        },
        "tonalOffset": 0.2,
        "type": "light",
      },
      "props": Object {},
      "shadows": Array [
        "none",
        "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
        "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
        "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
        "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
        "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
        "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
        "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
        "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
        "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
        "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
        "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
        "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
        "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
        "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
        "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
        "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
        "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
        "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
        "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
        "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
        "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
        "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
        "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
        "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": Object {
        "unit": 8,
      },
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 400,
          "lineHeight": "1.46429em",
        },
        "body1Next": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.5,
        },
        "body2": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "lineHeight": "1.71429em",
        },
        "body2Next": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 400,
          "letterSpacing": "0.01071em",
          "lineHeight": 1.5,
        },
        "button": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "textTransform": "uppercase",
        },
        "buttonNext": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.02857em",
          "lineHeight": 1.5,
          "textTransform": "uppercase",
        },
        "caption": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "lineHeight": "1.375em",
        },
        "captionNext": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.03333em",
          "lineHeight": 1.66,
        },
        "display1": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "2.125rem",
          "fontWeight": 400,
          "lineHeight": "1.20588em",
        },
        "display2": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "2.8125rem",
          "fontWeight": 400,
          "lineHeight": "1.13333em",
          "marginLeft": "-.02em",
        },
        "display3": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3.5rem",
          "fontWeight": 400,
          "letterSpacing": "-.02em",
          "lineHeight": "1.30357em",
          "marginLeft": "-.02em",
        },
        "display4": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "7rem",
          "fontWeight": 300,
          "letterSpacing": "-.04em",
          "lineHeight": "1.14286em",
          "marginLeft": "-.04em",
        },
        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
        "fontSize": 14,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "6rem",
          "fontWeight": 300,
          "letterSpacing": "-0.01562em",
          "lineHeight": 1,
        },
        "h2": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3.75rem",
          "fontWeight": 300,
          "letterSpacing": "-0.00833em",
          "lineHeight": 1,
        },
        "h3": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.04,
        },
        "h4": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "2.125rem",
          "fontWeight": 400,
          "letterSpacing": "0.00735em",
          "lineHeight": 1.17,
        },
        "h5": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.33,
        },
        "h6": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 500,
          "letterSpacing": "0.0075em",
          "lineHeight": 1.6,
        },
        "headline": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "lineHeight": "1.35417em",
        },
        "overline": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.08333em",
          "lineHeight": 2.66,
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "round": [Function],
        "subheading": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "lineHeight": "1.5em",
        },
        "subtitle1": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.75,
        },
        "subtitle2": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.00714em",
          "lineHeight": 1.57,
        },
        "suppressDeprecationWarnings": undefined,
        "title": Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.3125rem",
          "fontWeight": 500,
          "lineHeight": "1.16667em",
        },
        "useNextVariants": false,
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "tooltip": 1500,
      },
    }
  }
  updateYearRangeFilter={[MockFunction]}
  updatedRange={Object {}}
  yearFilter={
    Object {
      "invalid": false,
    }
  }
/>
`;

exports[`AdvancedSearchComponent should render minimised view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Show advanced search"
        >
          <pure(KeyboardArrowDownIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should toggle minimised view for advanced search 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;
